fix: Reduce container padding from 3rem to 1rem for proper centering
The 3rem container padding (6rem total) was pushing content too far to the left.
Standard Bootstrap uses 1rem (or less), which allows proper centering.

This should finally fix the off-center content issue.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -112,13 +112,13 @@ $spacers: (
 );
 
 // Container
-$container-padding-x: 3rem;
+$container-padding-x: 1rem;
 $container-max-widths: (
 	sm: 540px,
 	md: 720px,
 	lg: 960px,
 	xl: 1140px,
-	xxl: 1344px,
+	xxl: 1320px,
 );
 
 // Grid columns
